<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backg_3"
    android:paddingStart="110dp"
    android:paddingEnd="10dp"
    android:paddingTop="80dp"
    android:id="@+id/mainLayout3"
    tools:context=".MainActivity3"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <TextView
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="105dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/har"
        android:text="@string/page3"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="50dp"
        android:textSize="30sp" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/owner_img"
        android:layout_marginTop="205dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="315dp"
        android:textAlignment="center"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/age"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="330dp"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="270dp"
        android:fontFamily="@font/hobo"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/bday"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="360dp"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="@font/hobo"
        android:text="@string/zs"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="375dp"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/birth"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="390dp"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/status"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="405dp"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/school"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="420dp"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/hobo"
        android:text="@string/program"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="435dp"
        android:textSize="13sp" />


    <Button
        android:id="@+id/btnBack1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/dpink"
        android:text="@string/back1"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>