<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:id="@+id/mainLayout2"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <TextView
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="145dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bounce_thin"
        android:text="@string/intro"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="35dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="10dp"
        android:text="@string/page3"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"
        />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginBottom="10dp"
        android:text="@string/page4"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"
        />

    <Button
        android:id="@+id/btnNext5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hobs"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"
        />


    <Button
        android:id="@+id/btnNext3"
        android:layout_width="wrap_content"
        android:layout_height='wrap_content'
        android:layout_marginBottom="10dp"
        android:layout_marginStart="138dp"
        android:text="@string/page5"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"
        />

    <Button
        android:id="@+id/btnNext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="10dp"
        android:text="@string/page6"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"

        />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/quick_b"
        android:backgroundTint="@color/dpink"

        />


</LinearLayout>