<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/fran"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/hello1"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:fontFamily="@font/bounce_thin"
        android:padding="20dp"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btnYes"
        android:fontFamily="@font/quick_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dpink"
        android:text="@string/Yes"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btnExit"
        android:fontFamily="@font/quick_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:text="@string/No"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/dpink"
        android:layout_gravity="center"/>



</LinearLayout>