<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backg_4"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/bounce_thin"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="510dp"
        android:paddingEnd="10dp"
        android:text="@string/music"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/linkPl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/dpink"
        android:text="@string/pllink"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/quick_b"
        />


    <Button
        android:id="@+id/btnBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="650dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/dpink"
        android:fontFamily="@font/quick_b"
        android:text="@string/back3"
        android:textColor="@color/black" />


</RelativeLayout>